@@ -11,8 +11,14 @@
 (set @strict 0) (f1); "","",""
 (procedure f1 (+ 1 (+ 1 1))) (f1); "","3",""
 (procedure f1 (+ 1 1)) (procedure f2 (+ (f1) (f1))) (f2); "","4",""
+(procedure f1 (+ 1 1)) (procedure f2 (+ (f1) (f1))) (F2); "","4",""
+(procedure f1 (+ 1 1)) (procedure f2 (+ (F1) (F1))) (f2); "","4",""
+(procedure F1 (+ 1 1)) (procedure f2 (+ (F1) (F1))) (f2); "","4",""
 (procedure f1 (+ 1 1)) (procedure f2 (+ f1 f1)) (f2); "","Line 1: Undefined variable 'f1' Line 1: Undefined variable 'f1' 0",""
+(procedure F1 (+ 1 1)) (procedure f2 (+ f1 f1)) (f2); "","Line 1: Undefined variable 'f1' Line 1: Undefined variable 'f1' 0",""
+(procedure f1 (+ 1 1)) (procedure f2 (+ F1 f1)) (F2); "","Line 1: Undefined variable 'F1' Line 1: Undefined variable 'f1' 0",""
 (set @strict 0) (procedure f1 (+ 1 1)) (procedure f2 (+ f1 f1)) (f2); "","0",""
+(set @strict 0) (procedure f1 (+ 1 1)) (procedure f2 (+ f1 f1)) (F2); "","0",""
 (procedure f1 (set a 1) (set b 2) (+ a (+ 1 b))) (f1); "","4",""
 (procedure f1 a1 b1 (+ a1 b1)) (f1); "","0",""
 (procedure f1 (+ a1 b1)) (f1); "","Line 1: Undefined variable 'a1' Line 1: Undefined variable 'b1' 0",""
@@ -32,5 +38,7 @@
 (procedure f1 (+ 1 2)) (set a (f1)) (procedure f1 (+ 2 2)) (set a (+ a (f1))) (+ a); "","7",""
 (procedure f1 (+ 1 2)) (procedure f1 (+ 2 (f1))) (f1); "","Line 1: Max recursion depth exceeded 'f1' 0",""
 (procedure f1 a (if (< a 65) (f1 (+ a 1)) (+ 0))) (f1 1); "","Line 1: Max recursion depth exceeded 'f1' 0",""
+(procedure F1 a (if (< a 65) (f1 (+ a 1)) (+ 0))) (f1 1); "","Line 1: Max recursion depth exceeded 'f1' 0",""
 (procedure f1 a (if (< a 64) (f1 (+ a 1)) (+ 0))) (f1 1); "","0",""
 (procedure P_ADDMUL arg1 arg2 arg3 (* (+ arg1 arg2) arg3)) (P_ADDMUL 1 2 3) (P_ADDMUL 4 5); "","27",""
+(procedure p_ADDMUL arg1 arg2 arg3 (* (+ arg1 arg2) arg3)) (P_ADDMUL 1 2 3) (P_ADDMUL 4 5); "","27",""
