@@ -1,5 +1,7 @@
 (set a (cat "a" "b" "c")) ; "","abc",""
 (set a 1) (+ a 1) ; "","2",""
+(set A 1) (+ a 1) ; "","2",""
+(set a 1) (+ A 1) ; "","2",""
 (set a 1 b 2) (+ a b) ; "","3",""
 (set a 1 b 2) (set a 2) (+ a b) ; "","4",""
 (set a 1 b 2 c 3) ; "","3",""
@@ -22,9 +24,12 @@
 (set #flag 1) (set #flag (if #flag (+ 0) (+ 1))) (+ #flag) ; "","0",""
 (set #flag 0) (set #flag (if #flag (+ 0) (+ 1))) (+ #flag) ; "","1",""
 (set #flag 1) (set #flag (if #flag ((+ 0) (+ 1)))) (+ #flag) ; "","1",""
+(set #FLAG 1) (set #flag (if #flag ((+ 0) (+ 1)))) (+ #flag) ; "","1",""
+(set #flag 1) (set #flag (if #FLAG ((+ 0) (+ 1)))) (+ #flag) ; "","1",""
 (set #flag 0) (set #flag (if #flag ((+ 0) (+ 1)))) (+ #flag) ; "","0",""
 (set #flag 1) (set #flag (if #flag ((+ 0)) ((+ 1)))) (+ #flag) ; "","0",""
 (set #flag 0) (set #flag (if #flag ((+ 0)) ((+ 1)))) (+ #flag) ; "","1",""
 ((set #var1 5) (set #var2 6) (set #var3 7)) (+ #var1 #var2 #var3) ; "","18",""
 ((set #var1 5) (set #var2 6) (set #var3 7) (+ #var1 #var2 #var3)) ; "","18",""
 (set #var1 5) (set #var2 6) (set #var3 7) ((+ #var1 #var2 #var3)) ; "","18",""
+(set #Var1 5) (set #var2 6) (set #VAR3 7) ((+ #var1 #var2 #var3)) ; "","18",""
