@@ -1,5 +1,7 @@
 (symbolset "a" 1) (+ a 1) ; "","2",""
 (symbolset "a" "1") (+ a 1) ; "","2",""
+(symbolset "a" "1") (+ A 1) ; "","2",""
+(symbolset "A" "1") (+ a 1) ; "","2",""
 (symbolset "a" b) (+ a 1) ; "","Line 1: Undefined variable 'b' 0",""
 (set @strict 0) (symbolset "a" b) (+ a 1) ; "","1",""
 (set @strict 0) (symbolset "a" b) (set a 2) (+ a 1) ; "","3",""
@@ -13,11 +15,15 @@
 (symbolset "a" 1) (set b 2) (while (< a b) ((symbolset "a" (+ a 1)) (symbolset "b" (- b a)))) ; "","0",""
 (set i 1) (symbolset ("i%ld" i) i) (set i 2) (symbolset ("i%ld" i) i) (+ i1 i2) ; "","3",""
 (set i 1) (while (<= i 5) ((symbolset ("i%ld" i) i) (set i (+ 1 i)))) (+ i1 (+ i2 (+ i3 (+ i4 i5)))) ; "","15",""
+(set i 1) (while (<= I 5) ((symbolset ("i%ld" i) i) (set i (+ 1 i)))) (+ i1 (+ i2 (+ i3 (+ i4 i5)))) ; "","15",""
+(set i 1) (while (<= i 5) ((symbolset ("I%ld" i) i) (set i (+ 1 i)))) (+ i1 (+ i2 (+ i3 (+ i4 i5)))) ; "","15",""
+(set i 1) (while (<= i 5) ((symbolset ("I%ld" i) i) (set i (+ 1 i)))) (+ I1 (+ i2 (+ i3 (+ I4 i5)))) ; "","15",""
 (set i 1) (while (<= i 5) ((set i (+ 1 i)) (symbolset ("i%ld" i) i))) (+ i1 (+ i2 (+ i3 (+ i4 i5)))) ; "","Line 1: Undefined variable 'i1' 0",""
 (set @strict 0) (set i 1) (while (<= i 5) ((set i (+ 1 i)) (symbolset ("i%ld" i) i))) (+ i1 (+ i2 (+ i3 (+ i4 i5)))) ; "","14",""
 (symbolset "a" (+ 10 10) "b" 2) (+ a b) ; "","22",""
 (symbolset "a" 1 "b" 2) (while (< a b) ((symbolset "a" (+ a 1)) (symbolset "b" (- b a)))) ; "","0",""
 (symbolset "a" 1 "b" 2 "b" 2 "a" 1) (while (< a b) ((symbolset "a" (+ a 1)) (symbolset "b" (- b a)))) ; "","0",""
+(symbolset "A" 1 "B" 2 "b" 2 "a" 1) (while (< a b) ((symbolset "a" (+ a 1)) (symbolset "b" (- b a)))) ; "","0",""
 (symbolset "a" 1 "a" a) (+ a) ; "","1",""
 (symbolset "a" 1 "a" b) (+ a) ; "","Line 1: Undefined variable 'b' 0",""
 (set @strict 0) (symbolset "a" 1 "a" b) (+ a 2) ; "","2",""
